Prevent screen overflow

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body {
 .main {
   display: flex;
   min-height: 500px;
-  height: 71vh;
   margin-top: 50px;
 }
 
@@ -35,12 +34,16 @@ body {
   border-radius: 5px;
   padding: 10px;
   text-align: right;
+  word-wrap: break-word;
 }
 
 .upper-display {
   min-height: 32px;
   font-size: 25px;
   color: rgb(80, 79, 79);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .lower-display {
@@ -75,17 +78,17 @@ button:active {
   background-color: rgba(226, 255, 172, 1);
 }
 
-.operator {
+.special {
   background-color: rgba(66, 66, 66, 0.548);
   color: white;
   font-weight: 550;
 }
 
-.operator:hover {
+.special:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.operator:active {
+.special:active {
   background-color: rgba(0, 0, 0, 1);
 }
 
